@@ -1,4 +1,10 @@
 
+2007-07-17 (REL_1_3_0) Christian Walter <wolti@sil.at>:
+ Notes: Added Linux/TCP port. Fixed bug in MSP430 port.
+ Detailted notes:
+  - FEATURE (LINUX): Added Linux/TCP port.
+  - BUGS (MSP430): Fixed bug with calculating the timer value.
+
 2007-04-25 (REL_1_2_0) Christian Walter <wolti@sil.at>:
  Notes: Added LPC214X ARM port with Keil compiler. Added Z8Encore port for
    Z8F6422 microcontroller.
